# MathTools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: common.h
src/ui/: CanvasView.cpp  CanvasView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
